--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 CLERK_SECRET_KEY=sk_test_M08HtmKcaNG5f6SZ86kGAL2iebSHzlEqtjDLzOilfd
 
+GNEWS_API_KEY=39f80f77cfd11721dd15dc5dd3510c72
+
 DB_HOST=bmy5gfhqkqwbq5apgyx4-mysql.services.clever-cloud.com
 DB_USER=u2ewmgczt5egqhfj
 DB_PASSWORD=UzYNZeQiehr1WBrfEpNr
